# stitchtron9000

./: CMakeLists.txt  Mosaicer.txt  README.md  README.txt  package.xml
include/extractor/: extractor_node.h
include/feature/: feature2d.h  timer.hpp  tracker.h  visualization.h
include/homographer/: homographer_node.h
include/mosaicer/: mosaicer_common.hpp  mosaicer_node.hpp
launch/: extractor.launch  homographer.launch  mosaicer.launch  test_all.launch  test_extractor.launch  test_homographer.launch
msg/: Feature.msg  Homography.msg  KeyFrame.msg
param/: extractor.yml  feature2d.yml  feature_detector.yml
src/extractor/: CMakeLists.txt  extractor_main.cpp  extractor_node.cpp  test_mask.cpp
src/feature/: CMakeLists.txt  feature2d.cpp  visualization.cpp
src/feature/test/: test_feature2d.cpp
src/homographer/: CMakeLists.txt  homographer_main.cpp  homographer_node.cpp
src/mosaicer/: CMakeLists.txt  mosaicer_common.cpp  mosaicer_main.cpp  mosaicer_node.cpp
src/mosaicer/test/: test_warping.cpp
