<package format="2">
    <name>driver</name>
    <version>0.0.0</version>
    <description>The driver package</description>

    <maintainer email="quchao@seas.upenn.edu">Chao</maintainer>
    <maintainer email="gcross@seas.upenn.edu">Gareth</maintainer>
    <maintainer email="cedricd@seas.upenn.edu">Cedric </maintainer>

    <license>Whatever</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>sensor_msgs</depend>
    <depend>nodelet</depend>

    <export>
        <!--<nodelet plugin="${prefix}/nodelet_plugins.xml"/>-->
    </export>
</package>
