<package format="2">
    <name>stitchtron9000</name>
    <version>0.0.1</version>
    <description>Real-time aerial image stitching</description>

    <maintainer email="quchao@seas.upenn.edu">Chao</maintainer>
    <maintainer email="gcross@seas.upenn.edu">Gareth</maintainer>
    <maintainer email="cedricd@seas.upenn.edu">Cedric </maintainer>

    <license>Super top secret</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>sensor_msgs</depend>
    <depend>nodelet</depend>
    <depend>image_transport</depend>
    <depend>cv_bridge</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>std_msgs</depend>

    <export>
    </export>
</package>
